--- a/app/about-team.html
+++ b/app/about-team.html
@@ -74,9 +74,11 @@
               <div class="box-block-into box-gray team-box mb-5">
                 <div class="img-hover">
                   <div>
-                    <figure>
-                      <img src="images/media/team-01.jpg" alt="سامي كركند" class="img-fluid">
-                    </figure>
+                    <a href="https://www.linkedin.com/in/samicaracand/" target="_blank">
+                      <figure>
+                        <img src="images/media/team-01.jpg" alt="سامي كركند" class="img-fluid">
+                      </figure>
+                    </a>
                   </div>
                 </div>
                 <h3 class="px-3">سامي كركند</h3>
@@ -89,9 +91,11 @@
               <div class="box-block-into box-gray team-box mb-5">
                 <div class="img-hover">
                   <div>
-                    <figure>
-                      <img src="images/media/team-02.jpg" alt="ميرا الرابي" class="img-fluid">
-                    </figure>
+                    <a href="https://www.linkedin.com/in/miraalrabi/" target="_blank">
+                      <figure>
+                        <img src="images/media/team-02.jpg" alt="ميرا الرابي" class="img-fluid">
+                      </figure>
+                    </a>
                   </div>
                 </div>
                 <h3 class="px-3">ميرا الرابي</h3>
@@ -104,10 +108,13 @@
               <div class="box-block-into box-gray team-box mb-5">
                 <div class="img-hover">
                   <div>
+                    <a href="https://www.linkedin.com/in/azzam666/" target="_blank">
                     <figure>
                       <img src="images/media/team-03.jpg" alt="محمد عزام" class="img-fluid">
                     </figure>
+                  </a>
                   </div>
+
                 </div>
                 <h3 class="px-3">محمد عزام</h3>
                 <p class="px-3">
@@ -119,9 +126,11 @@
               <div class="box-block-into box-gray team-box mb-5">
                 <div class="img-hover">
                   <div>
+                    <a href="https://www.linkedin.com/in/hossamstruggler/" target="_blank">
                     <figure>
                       <img src="images/media/team-04.jpg" alt="حسام الدين أحمد" class="img-fluid">
                     </figure>
+                  </a>
                   </div>
                 </div>
                 <h3 class="px-3">حسام الدين أحمد</h3>
@@ -134,9 +143,11 @@
               <div class="box-block-into box-gray team-box mb-5">
                 <div class="img-hover">
                   <div>
+                    <a href="https://www.linkedin.com/in/omarsallam/" target="_blank">
                     <figure>
                       <img src="images/media/team-05.jpg" alt="عمر سلام" class="img-fluid">
                     </figure>
+                  </a>
                   </div>
                 </div>
                 <h3 class="px-3">عمر سلام</h3>
@@ -147,16 +158,9 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
-                <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
-                <h3 class="px-3">أسماء فرغلي</h3>
-                <p class="px-3">
-                إدارة جودة البيانات
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+                <a href="https://www.linkedin.com/in/fady-tharwat-375781a1/" target="_blank">
+                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+                </a>
                 <h3 class="px-3">فادي ثروت</h3>
                 <p class="px-3">
                 مدير نجاح العملاء
@@ -165,11 +169,38 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
+                <a href="https://www.linkedin.com/in/rehab-saad-80ba6427/" target="_blank">
                 <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+              </a>
                 <h3 class="px-3">رحاب سعد</h3>
                 <p class="px-3">
                 مدير نجاح العملاء
                 </p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
+              <div class="box-block-into box-gray team-box mb-5">
+                <a href="https://www.linkedin.com/in/asmaa-farghaly-5a6795127/" target="_blank">
+                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+                </a>
+                <h3 class="px-3">أسماء فرغلي</h3>
+                <p class="px-3">
+                إدارة جودة البيانات
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr>
+      <section class="mt-5 mb-5 featured-block text-center mt-5 pt-5 ">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6  mx-auto">
+              <h2 class="mb-4">تعرف على شركاؤنا</h2>
+              <div class="box-block-into box-gray team-box mb-5">
+                <i class="fa fa-building-o fa-user-placeholder" aria-hidden="true"></i>
+                <h3 class="px-3 pb-3">آرجنتم للاستشارات القانونية</h3>
               </div>
             </div>
           </div>
@@ -327,7 +358,7 @@
             </ul>
           </div>
           <div class="col-md-12">
-            <p  class="pt-3">Made by Masharee3 © 2018 - All Rights Reserved</p>
+            <p class="pt-3">Made by Masharee3 © 2018 - All Rights Reserved</p>
           </div>
         </div>
       </div>
