update Phone hide star & fix js error

--- a/app/company-details.html
+++ b/app/company-details.html
@@ -84,7 +84,18 @@
                   </li>
                   <li>
                     <span class="pull-left"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                    <div class="pull-left">+971 4 379 4556</div>
+                    <div class="pull-left">
+                      <span data-replace="0122-222-2222">
+                        0122
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                      </span>
+                    </div>
                   </li>
                   <li>
                     <span class="pull-left"><i class="fa fa-globe" aria-hidden="true"></i></span>
@@ -121,7 +132,7 @@
                   <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                 </ul>
               </div>
-            
+
             </div>
 
 
