update about page and footer

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
               <li class="list-group-item"><a href="about.html">About us</a></li>
               <li class="list-group-item"><a href="error-404.html">Error 404</a></li>
               <li class="list-group-item"><a href="about-team.html">About Team</a></li>
+              <li class="list-group-item"><a href="partnerships-page.html">Partnerships Page</a></li>
 
 
             </ul>
