--- a/app/partnerships-page.html
+++ b/app/partnerships-page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Team</title>
+    <title>Partnerships Page</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -56,10 +56,7 @@
             <div class="col-md-12">
               <div class="row justify-content-md-center">
                 <div class="col-md-9  align-self-center mb-5">
-                  <h2>تعرف على فريقنا</h2>
-                  <p class="pt-5">تنبع قدرة فريق العمل على الاداء من العمل على رؤية موحدة و من القدرة على تحويل الإنجازات الشخصية  الى اهداف مؤسسية، و هي ايضا الدافع المشجع لأشخاص متفرقين للتحول الى وحدة واحدة قادرة على الإتيان بنتائج غير عادية .</p>
-                  <p>في مشاريع.كوم، يعمل فريقنا بلا كلل أو ملل من اجل دعم تطور و نمو نظامنا الإقتصادي لإيماننا العميق بأن الشركات الصغيرة و المتوسطة هي العامل الأساسي من أ جل مستقبل افضل.</p>
-                  <p>السيدات و السادة، تعرفوا على الفريق المتميز لمشاريع.كوم</p>
+                  <h2 class="mb-4">تعرف على شركاؤنا</h2>
                 </div>
               </div>
             </div>
@@ -67,144 +64,19 @@
           </div>
         </div>
       </section>
+
       <section class="mt-5 mb-5 featured-block text-center mt-5 pt-5 ">
         <div class="container">
-          <div class="row rightcol">
+          <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
-                <div class="img-hover">
-                  <div>
-                    <a href="https://www.linkedin.com/in/samicaracand/" target="_blank">
-                      <figure>
-                        <img src="images/media/team-01.jpg" alt="Sami Caracand" class="img-fluid">
-                      </figure>
-                    </a>
-                  </div>
-                </div>
-                <h3 class="px-3">Sami Caracand</h3>
-                <p class="px-3">
-                  Founder
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <div class="img-hover">
-                  <div>
-                    <a href="https://www.linkedin.com/in/miraalrabi/" target="_blank">
-                      <figure>
-                        <img src="images/media/team-02.jpg" alt="Mira Alrabi" class="img-fluid">
-                      </figure>
-                    </a>
-                  </div>
-                </div>
-                <h3 class="px-3">Mira Alrabi</h3>
-                <p class="px-3">
-                  Co-founder
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <div class="img-hover">
-                  <div>
-                    <a href="https://www.linkedin.com/in/azzam666/" target="_blank">
-                    <figure>
-                      <img src="images/media/team-03.jpg" alt="Mohamed Azzam" class="img-fluid">
-                    </figure>
-                  </a>
-                  </div>
-
-                </div>
-                <h3 class="px-3">Mohamed Azzam</h3>
-                <p class="px-3">
-                  Front-end Developer
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <div class="img-hover">
-                  <div>
-                    <a href="https://www.linkedin.com/in/hossamstruggler/" target="_blank">
-                    <figure>
-                      <img src="images/media/team-04.jpg" alt="Hossam Eldin" class="img-fluid">
-                    </figure>
-                  </a>
-                  </div>
-                </div>
-                <h3 class="px-3">Hossam Eldin</h3>
-                <p class="px-3">
-                  Back-end Developer Back-end Developer 
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <div class="img-hover">
-                  <div>
-                    <a href="https://www.linkedin.com/in/omarsallam/" target="_blank">
-                    <figure>
-                      <img src="images/media/team-05.jpg" alt=" Omar Sallam" class="img-fluid">
-                    </figure>
-                  </a>
-                  </div>
-                </div>
-                <h3 class="px-3"> Omar Sallam</h3>
-                <p class="px-3">
-                Growth Hacker
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <a href="https://www.linkedin.com/in/fady-tharwat-375781a1/" target="_blank">
-                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
-                </a>
-                <h3 class="px-3"> Fady Tharwat</h3>
-                <p class="px-3">
-                 Partnerships Lead
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <a href="https://www.linkedin.com/in/rehab-saad-80ba6427/" target="_blank">
-                <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
-              </a>
-                <h3 class="px-3"> Rehab Saad</h3>
-                <p class="px-3">
-              Customer Success Manager 
-                </p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <a href="#" target="_blank">
-                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
-                </a>
-                <h3 class="px-3">Salma Samir</h3>
-                <p class="px-3">
-               Customer Success Manager 
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
-              <div class="box-block-into box-gray team-box mb-5">
-                <a href="https://www.linkedin.com/in/asmaa-farghaly-5a6795127/" target="_blank">
-                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
-                </a>
-                <h3 class="px-3">Asmaa Farghaly</h3>
-                <p class="px-3">
-               Data Analyst 
-                </p>
+                <i class="fa fa-building-o fa-user-placeholder" aria-hidden="true"></i>
+                <h3 class="px-3 pb-3">آرجنتم للاستشارات القانونية</h3>
               </div>
             </div>
           </div>
         </div>
       </section>
-
   	</main>
 
 
