--- a/app/about-team.html
+++ b/app/about-team.html
@@ -170,7 +170,9 @@
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
                 <a href="https://www.linkedin.com/in/rehab-saad-80ba6427/" target="_blank">
-                <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+                  <figure>
+                    <img src="images/media/team-07.jpg" alt="  Rehab Saad" class="img-fluid">
+                  </figure>
               </a>
                 <h3 class="px-3"> Rehab Saad</h3>
                 <p class="px-3">
@@ -181,9 +183,11 @@
 
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
-                <a href="#" target="_blank">
-                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
-                </a>
+                <a href="https://www.linkedin.com/in/salma-samir-7789b544/" target="_blank">
+                <figure>
+                  <img src="images/media/team-08.jpg" alt=" Salma Samir" class="img-fluid">
+                </figure>
+
                 <h3 class="px-3">Salma Samir</h3>
                 <p class="px-3">
                Customer Success Manager 
