--- a/app/about-team.html
+++ b/app/about-team.html
@@ -197,7 +197,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
                 <a href="https://www.linkedin.com/in/asmaa-farghaly-5a6795127/" target="_blank">
-                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+                  <img src="images/media/team-09.jpg" alt="  Asmaa Farghaly" class="img-fluid">
                 </a>
                 <h3 class="px-3">Asmaa Farghaly</h3>
                 <p class="px-3">
