--- a/app/about-team.html
+++ b/app/about-team.html
@@ -159,7 +159,9 @@
             <div class="col-lg-3 col-md-4 col-sm-6 d-flex">
               <div class="box-block-into box-gray team-box mb-5">
                 <a href="https://www.linkedin.com/in/fady-tharwat-375781a1/" target="_blank">
-                  <i class="fa fa-user fa-user-placeholder" aria-hidden="true"></i>
+                  <figure>
+                    <img src="images/media/team-06.jpg" alt=" Fady Tharwat" class="img-fluid">
+                  </figure>
                 </a>
                 <h3 class="px-3"> Fady Tharwat</h3>
                 <p class="px-3">
