NEW home PageBanner

--- a/app/home.html
+++ b/app/home.html
@@ -56,10 +56,13 @@
               <img src="images/hero/hero-home.png" alt="Home" class="img-fluid">
             </div>
             <div class="col-md-5 py-5">
-              <h1>مشاريعَك عندِنا</h1>
-              <p class="mt-3">كبر حجم أعمالك واختار المشاريع اللي تناسبك بكل سهولة</p>
+              <h1> بوابتك لنجاح أعمالك !</h1>
+              <p class="mt-3">كبر حجم أعمالك واختار المشاريع اللي تناسبك
+بكل سهولة او ابحث عن شركاء نجاح مشروعك
+من بين الاف الموردين المحترفيين</p>
               <div class="btn-hero">
-                <a href="#" data-toggle="modal" data-target="#add-company" class="btn btn-yellow-2"> تصفح المشاريع</a>
+                <a href="#" data-toggle="modal" data-target="#add-company" class="btn btn-yellow-2  mb-3">أبحث عن موردين</a>
+                <a href="#" data-toggle="modal" data-target="#add-company" class="btn btn-yellow-2  mb-3">أبحث عن فرص</a>
               </div>
             </div>
           </div>
