--- a/app/company-details.html
+++ b/app/company-details.html
@@ -85,7 +85,7 @@
                   <li>
                     <span class="pull-left"><i class="fa fa-phone" aria-hidden="true"></i></span>
                     <div class="pull-left">
-                      <span data-replace="0122-222-2222">
+                      <span data-replace="0122-222-2222" id="phoneTrigger">
                         0122
                         <i class="fa fa-asterisk" aria-hidden="true"></i>
                         <i class="fa fa-asterisk" aria-hidden="true"></i>
