--- a/app/company-details.html
+++ b/app/company-details.html
@@ -86,14 +86,7 @@
                     <span class="pull-left"><i class="fa fa-phone" aria-hidden="true"></i></span>
                     <div class="pull-left">
                       <span data-replace="0122-222-2222" id="phoneTrigger">
-                        0122
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
-                        <i class="fa fa-asterisk" aria-hidden="true"></i>
+                        <a href="" class="btn btn-blue btn-yellow btn-sm">	أظهر الرقم </a>
                       </span>
                     </div>
                   </li>
