--- a/app/company-details.html
+++ b/app/company-details.html
@@ -216,7 +216,6 @@
                           </div>
                         </div>
                         <h3 class="mt-4  mb-3 underline">Replies</h3>
-
                         <div class="media">
                           <div class="media-body push-left">
                             <h5 class="mt-0">Samy Gerges</h5>
@@ -305,11 +304,100 @@
                       </div>
                     </div>
 
-                    <div class="media br-btm  mb-4  d-flex row equal">
+                    <div class="media  br-btm  mb-4  d-flex row equal media-reply">
                       <div class="col-lg-9 col-md-10 mb-4">
                         <div class="media ">
                           <div class="media-body push-left">
-                            <h5 class="mt-0">Samy Gerges</h5>
+                            <h5 class="mt-0">Samy Gerges </h5>
+                            <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
+                              a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
+                            <ul class="review-content-social">
+                              <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
+                              <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
+                              <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
+                              <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-3 col-md-12">
+                        <div class="rating-sidebar">
+                          <div class="rating-sidebar-block">
+                            <h5 class="">Overall Rating</h5>
+                            <div class="star-rating">
+                              <ul class="list-inline">
+                                <li class="list-inline-item">
+                                  <select class="star-rating-fn">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                  </select>
+                                </li>
+                              </ul>
+                            </div>
+
+                          </div>
+                          <div class="rating-sidebar-block">
+                            <h5 class="">Selection Process</h5>
+                            <div class="star-rating">
+                              <ul class="list-inline">
+                                <li class="list-inline-item">
+                                  <select class="star-rating-fn">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                  </select>
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                          <div class="rating-sidebar-block">
+                            <h5 class="">Value for Money</h5>
+                            <div class="star-rating">
+                              <ul class="list-inline">
+                                <li class="list-inline-item">
+                                  <select class="star-rating-fn">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                  </select>
+                                </li>
+
+                              </ul>
+                            </div>
+                          </div>
+                          <div class="rating-sidebar-block">
+                            <h5 class="">Delivery Quality</h5>
+                            <div class="star-rating">
+                              <ul class="list-inline">
+                                <li class="list-inline-item">
+                                  <select class="star-rating-fn">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                  </select>
+                                </li>
+
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="arrow arrow-up"> </div>
+                    </div>
+                    <div class="media br-btm  mb-4  d-flex row equal  pr-5">
+                      <div class="col-lg-9 col-md-10 mb-4">
+                        <div class="media ">
+                          <div class="media-body push-left">
+                            <h5 class="mt-0">Samy Gerges Reply</h5>
                             <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
                               a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
                             <ul class="review-content-social">
@@ -395,7 +483,6 @@
                         </div>
                       </div>
                     </div>
-
 
 
                     <div class="media d-flex row equal">
